package com.university.patterns.adapter;

public class LegacyDataSource {
    public String[] retrieveData() {
        return new String[]{"Data1", "Data2", "Data3"};
    }
}
