package com.university.patterns.adapter;

import java.util.List;

public interface ModernDataInterface {
    List<String> getData();
}
