package com.university.patterns.observer;

public interface EventListener {
    void update(EventManager.Event event);
}
